# colorbox-demos

./: LICENSE  README.md
cpp/: .gitignore  CMakeLists.txt  demos.pro
cpp-qt/: .gitignore  CMakeLists.txt  README.md  demos.pro
cpp-qt/DynamicFrameLoad/: CMakeLists.txt  DynamicFrameLoad.pro  dialog.cpp  dialog.h  dialog.ui
cpp-qt/DynamicLutLoad/: CMakeLists.txt  DynamicLutLoad.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp
cpp-qt/DynamicMatrixLoad/: CMakeLists.txt  DynamicMatrixLoad.pro  dialog.cpp  dialog.h  dialog.ui
cpp-qt/FrameGrab/: CMakeLists.txt  FrameGrab.pro  dialog.cpp  dialog.h  dialog.ui
cpp-qt/Librarian/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui  filedownloader.cpp  filedownloader.h
cpp-qt/PreviewDemo/: CMakeLists.txt  PreviewDemo.pro  dialog.cpp  dialog.h  dialog.ui
cpp-qt/RGBTriplet/: CMakeLists.txt  RGBTriplet.pro  dialog.cpp  dialog.h  main.cpp
cpp-qt/api/: CMakeLists.txt  OAIAncCaptureFilter.cpp  OAIAncCaptureFilter.h  OAIBbcConfig.cpp  OAIBbcConfig.h  OAIBitDepth.cpp  OAIBitDepth.h  OAICSCFilter.cpp  OAICSCFilter.h  OAICalibrationPattern.cpp  OAICalibrationPattern.h  OAIColorCorrector.cpp  OAIColorCorrector.h  OAIColorSpace.cpp  OAIColorSpace.h  OAIColorfrontConfig.cpp  OAIColorfrontConfig.h  OAIColorfrontDynRangeGamut.cpp  OAIColorfrontDynRangeGamut.h  OAIColorfrontDynRangeGamutLiveModeIn.cpp  OAIColorfrontDynRangeGamutLiveModeIn.h  OAIColorfrontDynRangeGamutLiveModeOut.cpp  OAIColorfrontDynRangeGamutLiveModeOut.h  OAIColorfrontDynRangeGamutTvModeIn.cpp  OAIColorfrontDynRangeGamutTvModeIn.h  OAIColorfrontDynRangeGamutTvModeOut.cpp  OAIColorfrontDynRangeGamutTvModeOut.h  OAIColorfrontEngine.cpp  OAIColorfrontEngine.h  OAIColorfrontLiveMode.cpp  OAIColorfrontLiveMode.h  OAIColorfrontMode.cpp  OAIColorfrontMode.h  OAIColorfrontTvMode.cpp  OAIColorfrontTvMode.h  OAIColorimetry.cpp  OAIColorimetry.h  OAIConnection.cpp  OAIConnection.h  OAICrop4k2k.cpp  (+122 more)
cpp-qt/cmake/: AJAColorBoxDemos.cmake
cpp-qt/common/: ajawebsocketinterface.cpp  ajawebsocketinterface.h  colorboxdemocommon.h
cpp-restsdk/: CMakeLists.txt  README.md
cpp-restsdk/api/: ApiClient.cpp  ApiClient.h  ApiConfiguration.cpp  ApiConfiguration.h  ApiException.cpp  ApiException.h  CMakeLists.txt  HttpContent.cpp  HttpContent.h  IHttpBody.h  JsonBody.cpp  JsonBody.h  ModelBase.cpp  ModelBase.h  MultipartFormData.cpp  MultipartFormData.h  Object.cpp  Object.h  README.md
cpp-restsdk/api/api/: DefaultApi.cpp  DefaultApi.h
cpp-restsdk/api/model/: AncCaptureFilter.cpp  AncCaptureFilter.h  BbcConfig.cpp  BbcConfig.h  BitDepth.cpp  BitDepth.h  CSCFilter.cpp  CSCFilter.h  CalibrationPattern.cpp  CalibrationPattern.h  ColorCorrector.cpp  ColorCorrector.h  ColorSpace.cpp  ColorSpace.h  ColorfrontConfig.cpp  ColorfrontConfig.h  ColorfrontDynRangeGamut.cpp  ColorfrontDynRangeGamut.h  ColorfrontDynRangeGamutLiveModeIn.cpp  ColorfrontDynRangeGamutLiveModeIn.h  ColorfrontDynRangeGamutLiveModeOut.cpp  ColorfrontDynRangeGamutLiveModeOut.h  ColorfrontDynRangeGamutTvModeIn.cpp  ColorfrontDynRangeGamutTvModeIn.h  ColorfrontDynRangeGamutTvModeOut.cpp  ColorfrontDynRangeGamutTvModeOut.h  ColorfrontEngine.cpp  ColorfrontEngine.h  ColorfrontLiveMode.cpp  ColorfrontLiveMode.h  ColorfrontMode.cpp  ColorfrontMode.h  ColorfrontTvMode.cpp  ColorfrontTvMode.h  Colorimetry.cpp  Colorimetry.h  Connection.cpp  Connection.h  Crop4k2k.cpp  Crop4k2k.h  (+108 more)
cpp-restsdk/cmake/: AJAColorBoxDemosRestSDK.cmake
cpp-restsdk/dynamic_frame_load/: CMakeLists.txt  main.cpp
cpp-restsdk/dynamic_lut_load/: CMakeLists.txt  main.cpp
cpp-restsdk/get_temp/: CMakeLists.txt  main.cpp
cpp-restsdk/rgb_triplet/: CMakeLists.txt  main.cpp
cpp-restsdk/set_overlay_text/: CMakeLists.txt  main.cpp
cpp/SojiDynamicFrameLoad/: CMakeLists.txt  SojiDynamicFrameLoad.pro  dialog.cpp  dialog.h
cpp/SojiDynamicLutLoad/: CMakeLists.txt  SojiDynamicLutLoad.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp
cpp/SojiDynamicMatrixLoad/: CMakeLists.txt  SojiDynamicMatrixLoad.pro  dialog.cpp  dialog.h  dialog.ui  main.cpp
cpp/SojiFrameGrab/: CMakeLists.txt  SojiFrameGrab.pro  dialog.cpp  dialog.h  dialog.ui
cpp/SojiPreviewDemo/: CMakeLists.txt  SojiPreviewDemo.pro  dialog.cpp  dialog.h  dialog.ui
cpp/SojiRGBTriplet/: CMakeLists.txt  SojiRGBTriplet.pro  dialog.cpp  dialog.h  dialog.ui
cpp/api/: CMakeLists.txt  OAIAncCaptureFilter.cpp  OAIAncCaptureFilter.h  OAIBbcConfig.cpp  OAIBbcConfig.h  OAIBitDepth.cpp  OAIBitDepth.h  OAIColorCorrector.cpp  OAIColorCorrector.h  OAIColorSpace.cpp  OAIColorSpace.h  OAIColorfrontColorspace.cpp  OAIColorfrontColorspace.h  OAIColorfrontConfig.cpp  OAIColorfrontConfig.h  OAIColorimetry.cpp  OAIColorimetry.h  OAIConnection.cpp  OAIConnection.h  OAICrop4k2k.cpp  OAICrop4k2k.h  OAIDHCPState.cpp  OAIDHCPState.h  OAIDefaultApi.cpp  OAIDefaultApi.h  OAIEnum.h  OAIFrame.cpp  OAIFrame.h  OAIFrameStore.cpp  OAIFrameStore.h  OAIHelpers.cpp  OAIHelpers.h  OAIHttpFileElement.cpp  OAIHttpFileElement.h  OAIHttpRequest.cpp  OAIHttpRequest.h  OAIInterfaceSetupState.cpp  OAIInterfaceSetupState.h  OAIIpConfig.cpp  OAIIpConfig.h  (+96 more)
cpp/cmake/: AJASojiDemos.cmake
cpp/common/: ajawebsocketinterface.cpp  ajawebsocketinterface.h  sojidemocommon.h  sojirestapi.cpp  sojirestapi.h
go/: .gitignore  README.md
go/api/: README.md  api_default.go  client.go  configuration.go  go.mod  model_anc_capture_filter.go  model_bbc_config.go  model_bit_depth.go  model_calibration_pattern.go  model_color_corrector.go  model_color_space.go  model_colorfront_colorspace.go  model_colorfront_config.go  model_colorfront_dyn_range_gamut.go  model_colorfront_dyn_range_gamut_live_mode_in.go  model_colorfront_dyn_range_gamut_live_mode_out.go  model_colorfront_dyn_range_gamut_tv_mode_in.go  model_colorfront_dyn_range_gamut_tv_mode_out.go  model_colorfront_engine.go  model_colorfront_live_mode.go  model_colorfront_mode.go  model_colorfront_tv_mode.go  model_colorimetry.go  model_connection.go  model_crop4k2k.go  model_csc_filter.go  model_dhcp_state.go  model_file_type_choice.go  model_frame.go  model_frame_store.go  (+52 more)
python/: README.md  python_api.py
(+329 files in other folders)
